Actually fix .background shift on "Music"

--- a/wp-content/themes/wedontcare/src/scss/components/_background.scss
+++ b/wp-content/themes/wedontcare/src/scss/components/_background.scss
@@ -1,11 +1,10 @@
 .background {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: -1;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
+    height: 100vh;
 
     > img {
         display: block;
